# AmaliTech_Python_Backend_Labs

./: .gitignore  .pre-commit-config.yaml  README.md  coverage_report.txt  requirements.txt
CLEAN_CODE_TESTING_GIT/resilient-data-importer/: .coverage  .gitignore  .pre-commit-config.yaml  README  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
CLEAN_CODE_TESTING_GIT/resilient-data-importer/data/: custom_db.json  input_users.csv  users.json  users_valid.csv
CLEAN_CODE_TESTING_GIT/resilient-data-importer/docs/: api_design.md  architecture.md  code-review-checklist.md  git-work-flow.md  testing_strategy.md
CLEAN_CODE_TESTING_GIT/resilient-data-importer/src/: exceptions.py  logging_config.py  parser.py  storage.py  validator.py
CLEAN_CODE_TESTING_GIT/resilient-data-importer/src/importer/: cli.py  exceptions.py
CLEAN_CODE_TESTING_GIT/resilient-data-importer/src/models/: user.py  user_manager.py
CLEAN_CODE_TESTING_GIT/resilient-data-importer/tests/: conftest.py  test_logging.py  test_main.py  test_parser.py  test_service.py  test_storage.py  test_user_manager.py  test_validator.py
CLEAN_CODE_TESTING_GIT/secure-service-module/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  run_tests.bat
CLEAN_CODE_TESTING_GIT/secure-service-module/docs/: testing.md
CLEAN_CODE_TESTING_GIT/secure-service-module/src/api/: main.py  schemas.py
CLEAN_CODE_TESTING_GIT/secure-service-module/src/auth/: exceptions.py  interfaces.py  models.py  service.py
CLEAN_CODE_TESTING_GIT/secure-service-module/src/auth/implementation/: bcrypt_hasher.py  memory_repo.py
CLEAN_CODE_TESTING_GIT/secure-service-module/tests/: test_api.py  test_end_to_end.py  test_implementation.py  test_implementations.py  test_interfaces.py  test_login.py  test_main.py  test_models.py  test_registration.py  test_security.py  test_timing.py  test_validation.py  user_registration.py
CLEAN_CODE_TESTING_GIT/weather-api-stub/: .gitignore  .pre-commit-config.yaml  README  README.md  main.py  requirements.txt
CLEAN_CODE_TESTING_GIT/weather-api-stub/doc/: architecture.md
CLEAN_CODE_TESTING_GIT/weather-api-stub/src/: exceptions.py  service.py
CLEAN_CODE_TESTING_GIT/weather-api-stub/tests/: conftest.py  test_logging.py  test_main.py  test_provider.py  test_services.py
PYTHON_BASICS/Employee_payroll_tracker/: .gitignore  README.md  employee.py  logger.py  main.py  payroll.py  pyproject.toml  requirements.txt  test_payroll.py  utils.py
PYTHON_BASICS/Employee_payroll_tracker/models/: ContractEmployee.py  Employee.py  FullTimeEmployee.py  Intern.py  __init__.py
PYTHON_BASICS/Employee_payroll_tracker/tests/: test_payroll.py
PYTHON_BASICS/Library_Inventory_Application/: README.md  book.py  inventory.py  main.py  utils.py
PYTHON_BASICS/Vehicle_Rental_System/: logger.py  main.py  models.py  rental_system.py  requirements.txt
PYTHON_BASICS/Vehicle_Rental_System/vehicles/: __init__.py  base.py  bike.py  car.py  truck.py
PYTHON_BASICS/library-management/: README.md  author.py  book.py  borrower.py  main.py  requirements.txt  utils.py
PYTHON_BASICS/library-management/cli/: menu.py
PYTHON_BASICS/library-management/data/: authors.json  books.json  borrowers.json  library.json
PYTHON_BASICS/library-management/menu/: author_menu.py  borrow_menu.py  resource_menu.py
PYTHON_BASICS/vehicle-rental/: main.py  rental_system.py  requirements.txt
data/: users_with_errors.csv
docs/: architecture.md  modules.md  usage.md
src/auth/: exceptions.py  interfaces.py  models.py
src/importer/: __init__.py  logging_config.py  models.py  parser.py  repository.py  service.py  validator.py
tests/: test_cli.py  test_exceptions.py  test_integration.py  test_interface.py  test_logging_config.py  test_models.py  test_parser.py  test_repository.py
(+7 files in other folders)
