[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-data-importer"
version = "0.1.0"
description = "A resilient CLI tool for importing user data from CSV into a JSON-backed database."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
resilient-importer = "importer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=importer --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/importer"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
