[project]
name = "secure-service-module"
version = "0.1.0"
description = "Secure User Authentication Service Module for Lab 3"
authors = [
    {name = "Ishimwediane",email = "ishimwediane400@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "coverage (>=7.13.0,<8.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]
