[project]
name = "secure-service-module"
version = "1.0.0"
description = "Secure, SOLID, dependency-injected User Authentication Service Module with a CLI entry point"
authors = [
    {name = "Ishimwediane", email = "ishimwediane400@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0,<6.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src/auth --cov-report=term-missing"

[tool.coverage.run]
source = ["src/auth"]

[dependency-groups]
dev = [
    "black>=25.12.0,<26.0.0",
    "ruff>=0.14.9,<0.15.0",
    "mypy>=1.19.1,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "coverage>=7.13.0,<8.0.0",
]
