[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "employee-payroll-tracker"
version = "0.1.0"
description = "A Python CLI application for computing employee payroll with Rwanda PAYE tax."
authors = [
    {name = "AmaliTech"}
]
requires-python = ">=3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
